--- a/README
+++ b/README
@@ -1,9 +1,4 @@
-This is an empty project template.
-Just add your own code to the existing C or assembly files.
-Any added C or assembly files will automatically be built,
-no need to edit the Makefile.
-
-The template contains the following source files:
+This is a Tetris game built to work with the ChipKit UNO32 display using C and assembly
 
 main.c:
 	Contains the entry point main()
